src/objects/CF_Application_Access__c.object
<CustomObject>
    <description>Application Access is used to contain the records (Applications and their corresponding Permission Sets) granted by the flow: Application Access for User (API Name: CF_Application_Access_For_User) to users.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Application Access</relationshipLabel>
        <relationshipName>Application_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Level</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CF_Application_Level__c.DTC_Application__c</field>
                <operation>equals</operation>
                <valueField>$Source.DTC_Application__c</valueField>
            </filterItems>
            <infoMessage>Select your requested level of access</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CF_Application_Level__c</referenceTo>
        <relationshipLabel>Application Access</relationshipLabel>
        <relationshipName>Application_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>User Created</fullName>
                </value>
                <value>
                    <fullName>Permission Assigned</fullName>
                </value>
                <value>
                    <fullName>Setup Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to enable the FAST approval process to re-evaluate VR&apos;s before updating the status of the record.</description>
        <label>Approved Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <formula>Approver__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Belongs_to_my_Firm__c</fullName>
        <description>Checks to see whether the professional fiduciary attempting to gain access to FAST belongs to the Firm Account of the current user.</description>
        <formula>IF(   Account__r.Id =   $User.Account_Id__c , TRUE, FALSE)</formula>
        <label>Belongs to my Firm?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactIDPermissionSetID__c</fullName>
        <formula>Contact__r.Id +  CASESAFEID(Permission_Set_ID__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactIDPermissionSetID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Zip Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Access</relationshipLabel>
        <relationshipName>Application_Accesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTC_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DTC Application</label>
        <referenceTo>DTC_Application__c</referenceTo>
        <relationshipLabel>Application Accesses</relationshipLabel>
        <relationshipName>Application_Accesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FEP_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if this checkbox is checked, the fiduciary attempting to gain access to FAST, has been validated in CorpDB</description>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Federation_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Federation Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Firm Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Permission_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flow will update this field based on whether it is the first permission set for a user. If it is the 1st record, only then we create a public group and / or a queue.</description>
        <label>First Permission Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to mark the application access as inactive</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Contains a reject reason if the approval has been rejected</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Firm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POC Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_Set_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permission Mapping</label>
        <referenceTo>CF_Permission_Mapping__c</referenceTo>
        <relationshipLabel>Application Access</relationshipLabel>
        <relationshipName>Application_Accesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permission_Set__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Permission Set</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>US Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessManuallyCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProcessManuallyCase</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Application Access</relationshipLabel>
        <relationshipName>Application_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if the request should be handled manually due to errors</description>
        <label>Process Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create New User</fullName>
                </value>
                <value>
                    <fullName>Update Existing User Access</fullName>
                </value>
                <value>
                    <fullName>Remove User Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Squares_Number_of_User_Creation_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of User Creation Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stale_Date__c</fullName>
        <formula>IF(
MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7) &gt; 4,
DATEVALUE(CreatedDate)+ 4,
IF(
MOD(DATEVALUE(CreatedDate)- DATE(1900, 1, 6), 7) &gt; 0,
DATEVALUE(CreatedDate) + 2, DATEVALUE(CreatedDate) + 3
)
)</formula>
        <label>Stale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stale__c</fullName>
        <description>Checks for obsolete records.</description>
        <formula>IF(
FLOOR((NOW() -  CreatedDate )*24) &gt; 48, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stale?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <description>VBA Fiduciary Hubs</description>
        <label>VA Fiduciary Hub</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Null</fullName>
                    <default>true</default>
                    <label>Select Station From List</label>
                </value>
                <value>
                    <fullName>Columbia 319</fullName>
                </value>
                <value>
                    <fullName>Indianapolis 326</fullName>
                </value>
                <value>
                    <fullName>Louisville 327</fullName>
                </value>
                <value>
                    <fullName>Milwaukee 330</fullName>
                </value>
                <value>
                    <fullName>Lincoln 334</fullName>
                </value>
                <value>
                    <fullName>Salt Lake City 341</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VALERI_Analytics_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VALERI Analytics User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VALERI_Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VALERI_Doc_Gen_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VALERI Doc Gen User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VA_File_Number__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Please enter the VA File Number associated to the Beneficiary you support. If you support multiple beneficiaries, enter one VA File Number for one of the beneficiaries you support. This will serve as an authentication to gain access to the system.</inlineHelpText>
        <label>VA File Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Views_Squares_Program__c</fullName>
        <label>Squares Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SSVF</fullName>
                </value>
                <value>
                    <fullName>GPD</fullName>
                </value>
                <value>
                    <fullName>CERS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>HUD-VASH</fullName>
                </value>
                <value>
                    <fullName>NCCHV</fullName>
                </value>
                <value>
                    <fullName>VJP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application Access</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>ContactIDPermissionSetID__c</columns>
        <columns>DTC_Application__c</columns>
        <columns>Application_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Fast</fullName>
        <columns>NAME</columns>
        <columns>Firm_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Tax_Id__c</columns>
        <columns>Station__c</columns>
        <columns>State__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DTC_Application__c</field>
            <operation>equals</operation>
            <value>FAST</value>
        </filters>
        <label>All FAST</label>
        <sharedTo>
            <group>FAST_Application_Access_Approvers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KErry</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>ContactIDPermissionSetID__c</columns>
        <columns>DTC_Application__c</columns>
        <columns>Application_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approver__c</columns>
        <columns>Email_Id__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Firm_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Name__c</field>
            <operation>startsWith</operation>
            <value>FAST</value>
        </filters>
        <label>All Kerry</label>
        <sharedTo>
            <group>DTC_Helpdesk_ONLY</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_SQUARES_Users</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Views_Squares_Program__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Approver__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DTC_Application__c</field>
            <operation>equals</operation>
            <value>SQUARES</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <label>All SQUARES Users</label>
        <sharedTo>
            <group>Squares_Super_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_WHH</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>ContactIDPermissionSetID__c</columns>
        <columns>DTC_Application__c</columns>
        <columns>Application_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Name__c</field>
            <operation>equals</operation>
            <value>WHVA Hotline</value>
        </filters>
        <label>All WHH</label>
    </listViews>
    <listViews>
        <fullName>FAST_Application_User_Request_Queue</fullName>
        <booleanFilter>1 AND ((2 AND 3) OR (2 AND 5) OR (2 AND 4))</booleanFilter>
        <columns>NAME</columns>
        <columns>Firm_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Tax_Id__c</columns>
        <columns>Station__c</columns>
        <columns>State__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CF_Application_Access__c.FAST</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>In Process</value>
        </filters>
        <filters>
            <field>Firm_Name__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Stale__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>POC_Firm__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>FAST Application User Request Queue</label>
        <sharedTo>
            <group>FAST_Application_Access_Approvers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FEP_My_Pending_Fiduciary_Approvals</fullName>
        <columns>NAME</columns>
        <columns>Application_Name__c</columns>
        <columns>Email_Id__c</columns>
        <columns>Firm_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>In Process</value>
        </filters>
        <filters>
            <field>Belongs_to_my_Firm__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Pending Fiduciary Approvals</label>
    </listViews>
    <listViews>
        <fullName>HRM_Help_Desk_CF_Application_Access</fullName>
        <filterScope>Queue</filterScope>
        <label>HRM Help Desk</label>
        <queue>HRM_Help_Desk</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NVSPSE_Approval_Queue_CF_Application_Access</fullName>
        <filterScope>Queue</filterScope>
        <label>NVSPSE Approval Queue</label>
        <queue>NVSPSE_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Orphan_SQUARES_Applications</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Approver__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DTC_Application__c</field>
            <operation>equals</operation>
            <value>SQUARES</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <filters>
            <field>Approver__c</field>
            <operation>equals</operation>
            <value>SquaresLogin Site Guest User</value>
        </filters>
        <label>Orphan SQUARES Applications</label>
        <sharedTo>
            <group>Squares_Super_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VALERI_Approval_Queue_CF_Application_Access</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Approver__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>DTC_Application__c</columns>
        <filterScope>Queue</filterScope>
        <label>VALERI Approval Queue</label>
        <queue>VALERI_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VALERI_In_Process</fullName>
        <columns>NAME</columns>
        <columns>Application_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Approver__c</columns>
        <columns>Contact__c</columns>
        <columns>ContactIDPermissionSetID__c</columns>
        <columns>DTC_Application__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CF_Application_Access__c.VALERI</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>In Process</value>
        </filters>
        <label>VALERI In Process</label>
    </listViews>
    <listViews>
        <fullName>VALERI_Servicer_Approval_Request</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Approver__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>DTC_Application__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>In Process</value>
        </filters>
        <filters>
            <field>Approver__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>DTC_Application__c</field>
            <operation>equals</operation>
            <value>VALERI Application</value>
        </filters>
        <label>VALERI Servicer Approval Request</label>
        <sharedTo>
            <group>VALERI_Super_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VALERI_User_Request_Queue_CF_Application_Access</fullName>
        <filterScope>Queue</filterScope>
        <label>VALERI User Request Queue</label>
        <queue>VALERI_User_Request_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Views_Squares_CERS_CF_Application_Access</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>CERS</label>
        <queue>Views_Squares_CERS</queue>
        <sharedTo>
            <group>Squares_Super_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Application Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Access</pluralLabel>
    <recordTypes>
        <fullName>FAST</fullName>
        <active>true</active>
        <label>FAST</label>
    </recordTypes>
    <recordTypes>
        <fullName>NVSPSE</fullName>
        <active>true</active>
        <label>NVSPSE</label>
    </recordTypes>
    <recordTypes>
        <fullName>ORH</fullName>
        <active>true</active>
        <label>ORH</label>
    </recordTypes>
    <recordTypes>
        <fullName>Squares</fullName>
        <active>true</active>
        <label>Squares</label>
    </recordTypes>
    <recordTypes>
        <fullName>VALERI</fullName>
        <active>true</active>
        <label>VALERI</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FEP_Disable_Approval_of_Cancelled_record</fullName>
        <active>true</active>
        <description>Prevents users from approving cancelled records by mistake.</description>
        <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Approval_Status__c), &apos;Cancelled&apos;),
ISPICKVAL(Approval_Status__c, &apos;Approved&apos;),
 RecordType.Name == &quot;FAST&quot;
)</errorConditionFormula>
        <errorMessage>You cannot approve a cancelled application access record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stationfieldcannotbenull</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Application_Level__r.Name= &apos;Firm POC Fiduciary Access&apos; || Application_Level__r.Name= &apos;Individual Fiduciary Access&apos; , ISPICKVAL(Station__c ,&apos;Null&apos;))</errorConditionFormula>
        <errorDisplayField>Station__c</errorDisplayField>
        <errorMessage>Please select valid station</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VALERI_Servicer_Admin</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Application_Level__c) ,ISPICKVAL(Approval_Status__c , &apos;Approved&apos;) )</errorConditionFormula>
        <errorMessage>Application must have a Application level to be approved.</errorMessage>
    </validationRules>
</CustomObject>